framec_tests/language_specific/rust/v3_outline/negative/header_outside_section.frm
@target rust

system S {
    bad() {
        // body
    }
}

